# CV

./: CMakeLists.txt  CV.cpp  CV.vcxproj  CV.vcxproj.filters  Constants.h  Eval.cpp  Eval.py  Eval_func.cpp  Eval_func.h  Final_main.cpp  J_image.cpp  J_image.h  Lab7.cpp  Lab8.cpp  Project_Main.cpp  color_quantization.cpp  color_quantization.h  getImageBoxes.cpp  getImageBoxes.h  merging.cpp  merging.h  peer_filter.cpp  peer_filter.h  processing.cpp  processing.h  processing_7.cpp  processing_7.h  processing_8.cpp  processing_8.h  region_growing.cpp  region_growing.h  visualize_image.cpp  visualize_image.h
Project/: Eval.cpp  Eval_func.cpp  Eval_func.h
x64/Debug/: CV.exe.recipe  CV.ilk  CodeAnalysisResultManifest.txt  Project_Main.nativecodeanalysis.sarif  Project_Main.nativecodeanalysis.xml  lab5.obj.enc  vc.nativecodeanalysis.all.xml  vc143.idb
x64/Debug/CV.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CV.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/CV.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CV.lastbuildstate
